# cuda-projects

./: compile_and_run_cuda.sh  cuda_template.cu  run_dev_cuda.sh
0-template/: Dockerfile
00-template/: Makefile
01-newton-raphson/: CPUvsGPU.csv
02-kkt-solver-cpp/: kkt_solver.cpp  run_dev.sh
03-kkt-solver-cuda/: Dockerfile  GENERATED_LOOKUP.cu  generate_cuda.cpp
04-double-integrator-mpc/: GENERATED_LOOKUP.cu  Makefile  generate_util.cpp  solver.cu
05-osqp/include/: osqp_constraints.hpp
07-osqp-mpc-benchmarking/: CMakeLists.txt  compareResults.m  results_GPU2.csv
07-osqp-mpc-benchmarking/include/: MPCObjective.hpp
08-osqp-mpc-lib-draft-1/include/: MultiQPProblem.hpp  QPTypes.hpp
08-osqp-mpc-lib-draft-1/include/double_integrator_mpc/: DoubleIntegratorMPCArrayModel.hpp
08-osqp-mpc-lib-draft-1/include/mpc/: MPCProblem.hpp
08-osqp-mpc-lib-draft-1/include/util/: CSVTool.hpp
08-osqp-mpc-lib-draft-1/results/: multi_mpc_benchmark.csv
08-osqp-mpc-lib-draft-1/src/examples/: double_integrator_mpc_example.cpp
09-osqp-mpc-lib-draft-2/: CMakeLists.txt  resultsMPC.csv  resultsMPC.m
09-osqp-mpc-lib-draft-2/include/orlqp/: mpc_util.hpp  osqp_solver.hpp  osqp_util.hpp  qp_array_util.hpp  qp_problem_array.hpp
09-osqp-mpc-lib-draft-2/src/: mpc_util.cpp
09-osqp-mpc-lib-draft-2/src/benchmarks/: double_integrator_mpc_BM.cpp  double_integrator_mpc_array_BM.cpp
10-osqp-mpc-lib-draft-3/: CMakeLists.txt  Dockerfile  run_dev.sh
10-osqp-mpc-lib-draft-3/_old/src/: qp_array_util.cpp
10-osqp-mpc-lib-draft-3/_old/src/examples/: double_integrator_mpc_array.cpp
10-osqp-mpc-lib-draft-3/include/orlqp/: MPCProblem.hpp  OSQP.hpp  QPProblemArray.hpp
10-osqp-mpc-lib-draft-3/src/: mpc.cpp  osqp.cpp
10-osqp-mpc-lib-draft-3/tests/: simple_mpc.cpp  simple_mpc_array.cpp
11-orlqp-ros-di2d/: CMakeLists.txt  Dockerfile  package.xml  run_dev.sh
11-orlqp-ros-di2d/matlab/: double_integrator.m  double_integrator_array.asv  double_integrator_array.m
11-orlqp-ros-di2d/src/: orlqp_di2d_array_node.cpp  orlqp_di2d_node.cpp
11-orlqp-ros-lip/: CMakeLists.txt  Dockerfile  package.xml  run_dev.sh
11-orlqp-ros-lip/matlab/: double_integrator.asv  double_integrator.m
11-orlqp-ros-lip/src/: orlqp_lip_node.cpp
12-orlqp-ros-lip/: CMakeLists.txt  package.xml  run_dev.sh
12-orlqp-ros-lip/matlab/: inv_pendulum.m
12-orlqp-ros-lip/src/: orlqp_lip_node.cpp
13-orlqp-wang-lip/: CMakeLists.txt  Dockerfile  run_dev.sh
13-orlqp-wang-lip/include/tianze_lip/: TianzeLIP.hpp
13-orlqp-wang-lip/matlab/: gen_functions.m
13-orlqp-wang-lip/src/: main.cpp
14-cuP-lib-draft-1/: CMakeLists.txt  Dockerfile  run_dev.sh
14-cuP-lib-draft-1/include/cuP/: generator.hpp  problem.hpp  types.hpp
14-cuP-lib-draft-1/test/: cuP_test.cpp
2-kkt-solver/: Dockerfile  kkt_solver.cu  main  output.txt
2-kkt-solver-cpp/: Makefile
3-kkt-solver-cuda/: GENERATED_LOOKUP.cu  Makefile  benchmark_1.m  generate_cuda.cpp  generate_util.cpp  generator  solver  solver.cu
4-double-integrator-mpc/: GENERATED_LOOKUP.cu  Makefile  generate_cuda.cpp  generator  run_dev.sh  solve_jacobian.m  solver.cu
5-convex-optimization-lib/: Dockerfile  run_dev.sh
5-convex-optimization-lib/convex_optimization/: CMakeLists.txt
5-osqp/: CMakeLists.txt  Dockerfile
5-osqp/include/: osqp_util.hpp  symbol_vector.hpp
5-osqp/src/: main.cpp
6-osqp-mpc/: CMakeLists.txt  Dockerfile  run_dev.sh
6-osqp-mpc/include/: MPCConstraints.hpp  MPCDynamics.hpp  MPCObjective.hpp  MPCSolver.hpp  mpc_conversions.hpp  mpc_types.hpp  types.hpp
6-osqp-mpc/src/: main.cpp
7-osqp-mpc-benchmarking/: CMakeLists.txt  Dockerfile  compareResults.m  results_CPU.csv  results_CPU2.csv  results_CPU3.csv  results_GPU.csv  results_GPU3.csv  run_dev.sh
7-osqp-mpc-benchmarking/include/: MPCConstraints.hpp  MPCDynamics.hpp  MPCObjective.hpp  MPCSolver.hpp  types.hpp
7-osqp-mpc-benchmarking/src/: main.cpp
8-osqp-mpc-iterate/: CMakeLists.txt
8-osqp-mpc-iterate/archive/: types.hpp
8-osqp-mpc-iterate/include/: DoubleIntegratorMPCModel.hpp  DoubleIntegratorMPCProblem.hpp  MPCConstraints.hpp  MPCDynamics.hpp  MPCModel.hpp  MPCProblem.hpp  MPCSolver.hpp  OSQPSolver.hpp  QPModel.hpp  QPProblem.hpp  QPSolver.hpp
8-osqp-mpc-iterate/include/double_integrator_mpc/: DoubleIntegratorMPCModel.hpp
8-osqp-mpc-iterate/include/mpc/: MPCArrayModel.hpp  MPCArrayProblem.hpp  MPCModel.hpp  MPCProblem.hpp  MultiMPCProblem.hpp
8-osqp-mpc-iterate/src/: DoubleIntegratorMPCProblem.cpp  MPCProblem.cpp  OSQPSolver.cpp  double_integrator_mpc.cpp  main.cpp  mpc.cpp  mpc_array.cpp  osqp.cpp
8-osqp-mpc-iterate/src/examples/: double_integrator_mpc_array_example.cpp  double_integrator_mpc_example.cpp
8-osqp-mpc-lib-draft-1/: run_dev.sh
9-osqp-mpc-lib-draft-2/: CMakeLists.txt  results.m  run_dev.sh
9-osqp-mpc-lib-draft-2/_old_version/include/: QPModel.hpp
9-osqp-mpc-lib-draft-2/_old_version/src/: mpc.cpp  mpc_array.cpp  osqp.cpp
9-osqp-mpc-lib-draft-2/_old_version/src/double_integrator_mpc/: double_integrator_mpc.cpp
9-osqp-mpc-lib-draft-2/_old_version/src/examples/: double_integrator_mpc_array_example.cpp
9-osqp-mpc-lib-draft-2/include/orlqp/: mpc_problem.hpp  mpc_util.hpp  osqp_solver.hpp  osqp_util.hpp  qp_array_util.hpp  qp_problem.hpp  qp_problem_array.hpp  types.hpp
9-osqp-mpc-lib-draft-2/src/: mpc_util.cpp  osqp_util.cpp  qp_array_util.cpp
9-osqp-mpc-lib-draft-2/src/benchmarks/: double_integrator_mpc_BM.cpp
9-osqp-mpc-lib-draft-2/src/examples/: double_integrator_mpc.cpp  main.cpp
kkt-solver-1/: Dockerfile  Hubicki_testKKT_multiIneq.m  Makefile  run_dev.sh
newton-raphson-1/: GPUonly.csv  Makefile  benchmarkCPUvsGPU.cu  benchmarkGPUonly.cu  compare.csv  compare2.csv  compareResults.asv  compareResults.m  main.cu  ouput  output  resultsCPUvsGPU.m  resultsGPUonly.m  run_CPUvsGPU.sh  run_GPUonly.sh  run_dev.sh
(+8 files in other folders)
